--- a/build.xml
+++ b/build.xml
@@ -2,19 +2,20 @@
 
 <project name="CoojaTrace-sqlite" default="jar" basedir=".">
   <property name="cooja" value="../../.."/>
+ <property name="cooja_trace" value="../"/>
   <property name="archive" value="coojatrace-sqlite.jar"/>
 
   <target name="init">
     <tstamp/>
   	
     <path id="build.classpath">
-  	      <pathelement location="${cooja}/apps/coojatrace/lib/scala-library.jar"   />
+  	      <pathelement location="${cooja_trace}/lib/scala-library.jar"   />
   	      <pathelement location="build"   />
   	</path>
   	<taskdef resource="scala/tools/ant/antlib.xml">
   	      <classpath>
-  	        <pathelement location="${cooja}/apps/coojatrace/lib/scala-compiler.jar"   />
-  	        <pathelement location="${cooja}/apps/coojatrace/lib/scala-library.jar"   />
+  	        <pathelement location="${cooja_trace}/lib/scala-compiler.jar"   />
+  	        <pathelement location="${cooja_trace}/lib/scala-library.jar"   />
   	      </classpath>
   	</taskdef>
   </target>
@@ -26,10 +27,10 @@
         <pathelement location="${cooja}/dist/cooja.jar"/>
       	<pathelement location="${cooja}/lib/jdom.jar"/>
         <pathelement location="${cooja}/lib/log4j.jar"/>
-	<pathelement location="${cooja}/apps/coojatrace/coojatrace.jar"/>
-      	<pathelement location="${cooja}/apps/coojatrace/lib/scala-library.jar"/>
-      	<pathelement location="${cooja}/apps/coojatrace/lib/scala-compiler.jar"/>
-	<pathelement location="${cooja}/apps/coojatrace/lib/scala-reactive.jar"/>
+	<pathelement location="${cooja_trace}/coojatrace.jar"/>
+      	<pathelement location="${cooja_trace}/lib/scala-library.jar"/>
+      	<pathelement location="${cooja_trace}/lib/scala-compiler.jar"/>
+	<pathelement location="${cooja_trace}/lib/scala-reactive.jar"/>
 	<pathelement location="lib/sqlite4java.jar"/>
       </classpath>
     </scalac>
